imported google font nunito and set font family to nunito in css styling

--- a/loginpage/login.css
+++ b/loginpage/login.css
@@ -2,6 +2,8 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    @import url(https://fonts.googleapis.com/css?family=Nunito:200,300,regular,500,600,700,800,900,200italic,300italic,italic,500italic,600italic,700italic,800italic,900italic);
+    font-family: Nunito;
 }
 
 body{
